css/dark-theme.css
/* Base */
:root[data-theme="dark"] {
  background-color: var(--green-darkest);
  color: var(--green-86);

  & body {
    background: var(--green-darkest);
  }

  /*Brighter link color for better contrast*/
  &
    a:not(
      .btn,
      .btn-link--dark,
      .sitefooter a,
      .language-switch,
      .dev-siteheader__nav a,
      .dev-sidemenu a,
      .start__col,
      .ecom-entrance,
      .skip-to-content-link,
      .message--warn a,
      .message--info a
    ) {
    color: var(--blue-light);
  }

  &
    a:not(
      .btn,
      .btn-link--dark,
      .language-switch,
      .sitefooter a,
      .dev-siteheader__nav a,
      .dev-sidemenu a,
      .start__col,
      .ecom-entrance,
      .message--warn a,
      .message--info a
    ):hover {
    color: var(--blue-lighter);
  }

  /* lighter link if on message warn background */
  & .message--warn a, .message--info a {
    color: var(--blue-lighter);
  }

  & .message--warn a:hover {
    color: white;
  }

  & .color-theme-icon {
    color: var(--green-26);
  }

  & .light-icon {
    color: var(--green-86);
  }

  & .dev-eta {
    color: var(--green-86);
    & .dev-eta1__bring,
    & .dev-eta2__bring {
      color: var(--gray-20);
    }
  }

  & .dev-eta1__number,
  .dev-eta2__number {
    color: var(--green-light);
  }

  & .dev-docs__menu,
  & .bg-gray1,
  & .bg-gray2,
  & .bg-gray4 {
    background-color: var(--green-15);
  }

  & .bg-gray3,
  & .bg-green1,
  & .bg-red1 {
    background-color: var(--green-18);
  }

  & .dev-drawmenu {
    background-color: var(--green-darkest);
  }

  & .message--info {
    background-color: var(--green-22);
  }

  & .message--warn {
    background-color: var(--yellow-darker);
    border-color: var(--yellow-dark);
  }

  & .mce-response {
    background-color: var(--green-darkest);
    &.error {
      color: var(--red-light);
    }
    &.success {
      color: var(--green);
    }
  }

  & input,
  & optgroup,
  & select,
  & textarea {
    background-color: var(--green-26);
    color: var(--green-86);
    border-color: var(--green-40);
  }

  & .dev-docscontent__section,
  & tr,
  & .mb-border,
  & .schema__sublist {
    border-color: var(--gray-40);
  }

  & .start__col {
    color: inherit;
    & svg {
      fill: var(--green);
    }
  }

  & .cutoff-overlay {
    background: linear-gradient(
      0deg,
      var(--green-darkest) 50%,
      hsla(0, 0%, 100%, 0)
    );
  }

  & .gray {
    color: var(--gray-60);
  }

  & #services-bsg .icon-ui--green-dark {
    fill: var(--green);
  }

  & #services-bsg .icon-ui--lightgray {
    fill: var(--gray-40);
  }

  & .ecom-entrance {
    color: inherit;
    & svg {
      fill: var(--green);
    }
  }

  & .dev-blog__meta-item,
  & .filename {
    color: var(--green-80);
  }

  /* Buttons */
  & .btn--white,
  & .btn--white:link,
  & .btn--white:visited,
  & .btn-link--dark {
    background-color: var(--green-22);
    color: var(--green-86);
    border-color: var(--green-40);
  }

  & .btn-link {
    color: var(--green-86);
  }

  & .btn-link svg,
  & .btn--white svg,
  & .btn-link--dark svg {
    color: var(--green-60);
  }

  & .btn-link:hover {
    background-color: var(--green-22);
  }

  & .btn--white:hover,
  & .btn--white.active {
    background-color: var(--green-18);
  }

  & .btn-link--dark {
    &.active,
    &:active,
    &[aria-selected="true"],
    &:hover {
      background-color: var(--green-15);
    }

    &.txt-error {
      color: var(--red-light-lighter);
      &:hover {
        color: var(--red-light);
      }
    }

    &.txt-success {
      color: var(--green-light);
      &:hover {
        color: var(--green);
      }
    }
  }

  & .btn-link--copy {
    background-color: var(--green-26);
  }

  & input[type="submit"] {
    background-color: var(--green);
    border-color: var(--green-15);
    color: var(--gray-20);
    &:hover {
      background-color: var(--green-hover);
    }
  }

  & .dev-sidemenu a,
  & .param-toggle-icon,
  & .form__label,
  & .dev-docscontent__info summary,
  & .dev-docscontent__info details p {
    color: var(--green-86);
  }

  & .dev-sidemenu a,
  & .theme-switch {
    &:focus,
    &:hover {
      background-color: hsla(150, 20%, 80%, 0.1) !important;
    }
  }

  & .dev-docscontent__info summary {
    &:hover {
      background-color: var(--green-15);
    }
  }

  & .param-required {
    color: var(--red-light-lighter);
  }

  & .dev-collapsible__toggler {
    background-color: var(--green-22);
    color: var(--green-86);
    &:hover {
      background-color: var(--green-26);
    }
  }

  /* Code and badges */
  & dl code,
  & li code:not(table code),
  & p code,
  & .mb-badge {
    background-color: var(--green-22);
    color: var(--green-86);
  }

  & pre,
  & .bg-white {
    background-color: var(--green-18);
    color: var(--green-86);
  }

  & .desc-list dt code {
    background: transparent;
  }

  & .mb-badge--green {
    background-color: var(--green-light);
    color: var(--green-dark);
  }

  & .mb-badge--blue {
    background-color: var(--blue-lighter);
    color: var(--blue);
  }

  & .mb-badge--red {
    background-color: var(--green-15);
    color: var(--red-light);
  }

  & .mb-badge--yellow {
    background-color: var(--yellow-darker);
    color: var(--yellow-light);
  }

  /* Side menu */
  & .dev-sidemenu__title {
    color: var(--green-light);
  }

  & .dev-sidemenu ul > li.active {
    border-color: var(--green-dark);
  }

  & .dev-sidemenu a.active {
    background-color: var(--green-22);
  }

  /* Response codes */
  & .response {
    background-color: var(--green-15);

    &.green-dark {
      color: var(--green-light);
    }

    &.red-dark {
      color: var(--red-light);
    }
  }

  & .mb-disclosure {
    & > summary {
      &:hover,
      &:focus-visible {
        background-color: var(--green-18);
      }
    }

    &.bg-gray1,
    &.bg-green1,
    &.bg-red1 {
      & > summary {
        background-color: var(--green-15);

        &:hover,
        &:focus-visible {
          background-color: var(--green-18);
        }
      }

      &[open] > summary {
        background-color: var(--green-18);

        &:hover,
        &:focus-visible {
          background-color: var(--green-22);
        }
      }
    }

    & .green-dark {
      color: var(--green-light);
    }

    & .red-dark {
      color: var(--red-light-lighter);
    }
  }

  /* Code tabs */
  & .mb-card {
    background-color: var(--green-26);
    border-color: var(--green-26);
    color: var(--green-86);

    &:hover {
      background-color: var(--green-18);
    }

    &.mb-card--active,
    &.mb-card--active:focus-visible,
    &.mb-card--active:hover {
      background-color: var(--green-18);
      border-color: var(--green-light);
    }
  }

  /* Algolia search result panel */
  & .aa-Panel {
    background-color: var(--green-15);
    color: var(--green-86);
  }

  /* Algolia search hitlink */
  & .hitlink {
    border-bottom-color: var(--green-darkest);
  }

  & td.flipCreateOrderXml,
  td.flipItemDataXml,
  td.flipCreateOrderResponseXml,
  td.flipItemDataResponseXml,
  td.flipErrorCodesXml {
    background: var(--blue);
  }
  & td.flipCreateOrderJson,
  td.flipCreateOrderResponseJson,
  td.flipItemDataResponseJson,
  td.flipErrorCodesJson,
  td.flipItemDataJson {
    background: var(--green-dark);
  }
}

